--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
+    "vue-class-component": "^7.2.6",
     "vue-loader": "^15.9.5",
+    "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
