--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RedTopper/awalter.net.git"
+    "url": "git+https://github.com/RedTopper/My-Website.git"
   },
   "keywords": [
     "Personal",
@@ -23,9 +23,9 @@
   "author": "Aaron Walter",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/RedTopper/awalter.net/issues"
+    "url": "https://github.com/RedTopper/My-Website/issues"
   },
-  "homepage": "https://github.com/RedTopper/awalter.net#readme",
+  "homepage": "https://awalter.net/",
   "dependencies": {
     "vue": "^2.6.12"
   },
